--- a/CCSAWpfDemo/CustomerInfo.xaml
+++ b/CCSAWpfDemo/CustomerInfo.xaml
@@ -59,19 +59,43 @@
                     <ColumnDefinition Width="80"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="1" Grid.Column="1" Text="First Name:" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="20"/>
-                <TextBox x:Name="txtFirstName" Text="{Binding SelectedCustomer.FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>
+
+                <TextBox x:Name="txtFirstName" Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="0 10 0 10" FontSize="15" VerticalContentAlignment="Center">
+                    <Validation.ErrorTemplate>
+                        <ControlTemplate>
+                            <StackPanel>
+                                <AdornedElementPlaceholder x:Name="textBox"/>
+                                <ItemsControl ItemsSource="{Binding}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="First name required" Foreground="red" Margin="0 0 0 0"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </StackPanel>
+                        </ControlTemplate>
+                    </Validation.ErrorTemplate>
+                </TextBox>
+
+                <!--<TextBox x:Name="txtFirstName" Text="{Binding SelectedCustomer.FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="0 0 0 20" FontSize="15" VerticalContentAlignment="Center"/>-->
+
+                
+
+
                 <!--<TextBox Text="{Binding SelectedCustomer.FirstName, Mode=TwoWay}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>-->
                 <TextBlock Grid.Row="2" Grid.Column="1" Text="Last Name:" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="20"/>
-                <TextBox x:Name="txtLastName" Text="{Binding SelectedCustomer.LastName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="txtLastName" Text="{Binding SelectedCustomer.LastName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3" Margin="0 10 0 10" FontSize="15" VerticalContentAlignment="Center"/>
                 <!--<TextBox Text="{Binding SelectedCustomer.LastName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>-->
                 <TextBlock Grid.Row="3" Grid.Column="1" Text="Gender:" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="20"/>
-                <ComboBox ItemsSource="{Binding Genders}" SelectedItem="{Binding SelectedCustomer.Gender}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>
+                <ComboBox ItemsSource="{Binding Genders}" SelectedItem="{Binding SelectedCustomer.Gender}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3" Margin="0 10 0 10" FontSize="15" VerticalContentAlignment="Center"/>
                 <TextBlock Grid.Row="4" Grid.Column="1" Text="Address:" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="20"/>
-                <TextBox Text="{Binding SelectedCustomer.Address}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding SelectedCustomer.Address}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3" Margin="0 10 0 10" FontSize="15" VerticalContentAlignment="Center"/>
                 <TextBlock Grid.Row="5" Grid.Column="1" Text="IsAdmin:" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="20"/>
-                <CheckBox IsChecked="{Binding SelectedCustomer.IsAdmin}" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>
+                <CheckBox IsChecked="{Binding SelectedCustomer.IsAdmin}" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3" Margin="0 10 0 10" FontSize="15" VerticalContentAlignment="Center"/>
 
-                <TextBox Style="{StaticResource myTextboxStyle}" Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>
+                <!--<TextBox Style="{StaticResource myTextboxStyle}" Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" Margin="5" FontSize="15" VerticalContentAlignment="Center"/>-->
+
+                
 
                 <Button Content="Reset" Click="Reset_Click" Grid.Row="7" Grid.Column="3" Margin="5"/>
                 <Button Content="Add Customer" Click="Add_Customer_Click" Grid.Row="7" Grid.Column="4" Margin="5"/>
